--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 		"compile": "NODE_ENV=production webpack -p -c webpack.config.js"
 	},
 	"dependencies": {
+		"babel-eslint": "^10.1.0",
 		"css-loader": "^4.3.0",
+		"eslint-config-prettier": "^6.12.0",
+		"eslint-plugin-react": "^7.21.2",
+		"eslint-plugin-react-hooks": "^4.1.2",
 		"front-matter": "^4.0.2",
 		"publicodes": "1.0.0-beta.3",
 		"raw-loader": "^4.0.1",
